[gd_scene load_steps=2 format=3 uid="uid://cqwxr6gloves"]

[ext_resource type="Script" path="res://scripts/ui/gloves_ui.gd" id="1_gloves_ui"]

[node name="GlovesUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gloves_ui")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -170.0
offset_top = -280.0
offset_right = 170.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
text = "‚öóÔ∏è ALCHEMY GLOVES Lv.3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
text = "X"

[node name="ChargeBar" type="ProgressBar" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 45.0
offset_right = -10.0
offset_bottom = 60.0
grow_horizontal = 2
max_value = 100.0
value = 43.0
show_percentage = false

[node name="ChargeLabel" type="Label" parent="Panel/ChargeBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Charge: 43/100 ‚ö°"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 65.0
offset_bottom = 85.0
grow_horizontal = 2
text = "Progress: 2,470/3,000 ‚Üí Lv.4"
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 90.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Analyze" type="VBoxContainer" parent="Panel/TabContainer"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="Panel/TabContainer/Analyze"]
layout_mode = 2
text = "Raw Materials Available:"

[node name="RawLKCLabel" type="Label" parent="Panel/TabContainer/Analyze"]
layout_mode = 2
text = "‚ö´ raw lkC √ó 798"

[node name="HSeparator" type="HSeparator" parent="Panel/TabContainer/Analyze"]
layout_mode = 2

[node name="BatchLabel" type="Label" parent="Panel/TabContainer/Analyze"]
layout_mode = 2
text = "Batch Size (Lv.3): 10 chunks
Speed: 0.5s per analysis"

[node name="HSeparator2" type="HSeparator" parent="Panel/TabContainer/Analyze"]
layout_mode = 2

[node name="Analyze1Button" type="Button" parent="Panel/TabContainer/Analyze"]
layout_mode = 2
text = "[ ANALYZE 1 ] (Cost: 1 ‚ö°)"

[node name="Analyze10Button" type="Button" parent="Panel/TabContainer/Analyze"]
layout_mode = 2
text = "[ ANALYZE 10 ] (Cost: 10 ‚ö°)"

[node name="HSeparator3" type="HSeparator" parent="Panel/TabContainer/Analyze"]
layout_mode = 2

[node name="RechargeButton" type="Button" parent="Panel/TabContainer/Analyze"]
layout_mode = 2
text = "[ RECHARGE ] (80 raw lkC ‚Üí +10 ‚ö°)"

[node name="Reactions" type="VBoxContainer" parent="Panel/TabContainer"]
visible = false
layout_mode = 2

[node name="InfoLabel" type="Label" parent="Panel/TabContainer/Reactions"]
layout_mode = 2
text = "Drag & Drop Elements:"

[node name="ReactantSlots" type="HBoxContainer" parent="Panel/TabContainer/Reactions"]
layout_mode = 2

[node name="Slot1" type="Button" parent="Panel/TabContainer/Reactions/ReactantSlots"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
text = "Empty"

[node name="Slot2" type="Button" parent="Panel/TabContainer/Reactions/ReactantSlots"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
text = "Empty"

[node name="Slot3" type="Button" parent="Panel/TabContainer/Reactions/ReactantSlots"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
text = "Empty"

[node name="HSeparator" type="HSeparator" parent="Panel/TabContainer/Reactions"]
layout_mode = 2

[node name="ReactionTypeLabel" type="Label" parent="Panel/TabContainer/Reactions"]
layout_mode = 2
text = "Type: ‚öôÔ∏è Physical | üß™ Chemical | ‚ò¢Ô∏è Nuclear"

[node name="ChargeLabel" type="Label" parent="Panel/TabContainer/Reactions"]
layout_mode = 2
text = "Charge Required: 0 ‚ö°"

[node name="HSeparator2" type="HSeparator" parent="Panel/TabContainer/Reactions"]
layout_mode = 2

[node name="ReactButton" type="Button" parent="Panel/TabContainer/Reactions"]
layout_mode = 2
text = "[ REACT ]"

[connection signal="pressed" from="Panel/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="Panel/TabContainer/Analyze/Analyze1Button" to="." method="_on_analyze_1_pressed"]
[connection signal="pressed" from="Panel/TabContainer/Analyze/Analyze10Button" to="." method="_on_analyze_10_pressed"]
[connection signal="pressed" from="Panel/TabContainer/Analyze/RechargeButton" to="." method="_on_recharge_pressed"]
